manifests/ate-install/ate-controller.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Namespace
apiVersion: v1
metadata:
  name: ate-system

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: ate-controller
  namespace: ate-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ate-controller
  template:
    metadata:
      labels:
        app: ate-controller
    spec:
      serviceAccountName: ate-controller
      containers:
      - name: ate-controller
        image: ko://github.com/agent-substrate/substrate/cmd/atecontroller
        args:
        - --ateapi-ca-file=/run/servicedns-ca/trust-bundle.pem
        - --ateapi-client-cert=/run/podidentity.podcert.ate.dev/credential-bundle.pem
        ports:
        - name: healthz
          containerPort: 8081
          protocol: TCP
        volumeMounts:
        # Controller's own client identity presented to ateapi.
        - name: "podidentity"
          mountPath: "/run/podidentity.podcert.ate.dev"
        # Trust bundle used to verify ateapi's servicedns serving cert.
        - name: "servicedns-ca"
          mountPath: "/run/servicedns-ca"
      volumes:
      - name: "podidentity"
        projected:
          sources:
          - podCertificate:
              signerName: podidentity.podcert.ate.dev/identity
              keyType: ECDSAP256
              credentialBundlePath: credential-bundle.pem
      - name: "servicedns-ca"
        projected:
          sources:
          - clusterTrustBundle:
              signerName: servicedns.podcert.ate.dev/identity
              labelSelector:
                matchLabels:
                  podcert.ate.dev/canarying: live
              path: trust-bundle.pem
