manifests/ate-install/atenet-router-agentgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atenet-router
  namespace: ate-system
  labels:
    app: atenet-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atenet-router
  template:
    metadata:
      labels:
        app: atenet-router
    spec:
      serviceAccountName: atenet-router
      containers:
      - name: atenet-router
        image: ko://github.com/agent-substrate/substrate/cmd/atenet
        args:
        - "router"
        - "--networking-mode=agentgateway"
        - "--standalone"
        - "--namespace=ate-system"
        - "--port-http=8080"
        - "--port-extproc=50051"
        - "--extproc-address=127.0.0.1"
        - "--ateapi-address=api.ate-system.svc:443"
        - "--status-port=4040"
        - "--port-https=8443"
        - "--tls-cert-path=/run/servicedns.podcert.ate.dev/cert.pem"
        - "--tls-key-path=/run/servicedns.podcert.ate.dev/key.pem"
        ports:
        - name: extproc
          containerPort: 50051
        - name: status
          containerPort: 4040
      - name: agentgateway
        image: cr.agentgateway.dev/agentgateway:v1.3.0-alpha.1
        args:
        - "-f"
        - "/etc/agentgateway/config.yaml"
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: readiness
          containerPort: 15021
        - name: metrics
          containerPort: 15020
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 15021
          periodSeconds: 10
        volumeMounts:
        - name: agentgateway-config
          mountPath: /etc/agentgateway
        - name: "servicedns"
          mountPath: "/run/servicedns.podcert.ate.dev"
      volumes:
      - name: agentgateway-config
        configMap:
          name: atenet-router-agentgateway-config
      - name: "servicedns"
        projected:
          sources:
          - podCertificate:
              signerName: servicedns.podcert.ate.dev/identity
              keyType: ECDSAP256
              certificateChainPath: cert.pem
              keyPath: key.pem
---
apiVersion: v1
kind: Service
metadata:
  name: atenet-router
  namespace: ate-system
spec:
  type: ClusterIP
  selector:
    app: atenet-router
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
